Fix typo in description of the value-range of a parameter

--- a/doc/inc/50/51/ray_casting.tex
+++ b/doc/inc/50/51/ray_casting.tex
@@ -49,7 +49,7 @@ schneidet die Bildfläche $s$ an einem Punkt $S = (x_{S}, y_{S}, z_{S})$.
 Somit ergibt sich die Richtung $d = S - x_{0} = (x_{S} - x_{x_{0}},
 y_{S} - y_{x_{0}}, z_{S} - z_{x_{0}}) = (x_{d}, y_{d}, z_{d})$. Der
 Strahl $r$ trifft und schneidet schliesslich ein Objekt am Punkt $p =
-r(t) = x_{0} + t \cdot d$ wobei $t \int [1, \infty]$ ist. Dies führt dazu, dass das
+r(t) = x_{0} + t \cdot d$ wobei $t \in [1, \infty]$ ist. Dies führt dazu, dass das
 Raster, durch welches der Strahl $r$ hindurch geht, die Farbe des
 getroffenen Objektes annimmt.
 
